src/Analizador/GolangParser.java
/* Generated By:JavaCC: Do not edit this line. GolangParser.java */
package Analizador;
public class GolangParser implements GolangParserConstants {

// Reglas
  final public void CompilationUnit() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PACKAGE:
      PackageDeclaration();
      break;
    default:
      jj_la1[0] = jj_gen;
      ;
    }
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IMPORT:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
      ImportDeclaration();
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FUNC:
      case VAR:
      case TYPE:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      TopLevelDeclaration();
    }
    jj_consume_token(0);
  }

  final public void PackageDeclaration() throws ParseException {
    jj_consume_token(PACKAGE);
    jj_consume_token(IDENTIFIER);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SEMICOLON:
      jj_consume_token(SEMICOLON);
      break;
    default:
      jj_la1[3] = jj_gen;
      ;
    }
  }

  final public void ImportDeclaration() throws ParseException {
    jj_consume_token(IMPORT);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STRING:
      jj_consume_token(STRING);
      jj_consume_token(SEMICOLON);
      break;
    case LPAREN:
      jj_consume_token(LPAREN);
      jj_consume_token(STRING);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[4] = jj_gen;
          break label_3;
        }
        jj_consume_token(COMMA);
        jj_consume_token(STRING);
      }
      jj_consume_token(RPAREN);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SEMICOLON:
        jj_consume_token(SEMICOLON);
        break;
      default:
        jj_la1[5] = jj_gen;
        ;
      }
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void TopLevelDeclaration() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FUNC:
      FunctionDecl();
      break;
    case TYPE:
      TypeDecl();
      break;
    case VAR:
      VarDecl();
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void FunctionDecl() throws ParseException {
                       System.out.println("Function");
    jj_consume_token(FUNC);
    jj_consume_token(IDENTIFIER);
    Signature();
    FunctionBody();
  }

  final public void Signature() throws ParseException {
    jj_consume_token(LPAREN);
    ParameterList();
    jj_consume_token(RPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
    case INTEGER:
    case FLOAT:
    case STRING:
      TypeName();
      break;
    default:
      jj_la1[8] = jj_gen;
      ;
    }
  }

  final public void ParameterList() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      ParameterDecl();
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[9] = jj_gen;
          break label_4;
        }
        jj_consume_token(COMMA);
        ParameterDecl();
      }
      break;
    default:
      jj_la1[10] = jj_gen;
      ;
    }
  }

  final public void ParameterDecl() throws ParseException {
    jj_consume_token(IDENTIFIER);
    TypeName();
  }

  final public void FunctionBody() throws ParseException {
    Block();
  }

  final public void Block() throws ParseException {
    jj_consume_token(LBRACE);
    StatementList();
    jj_consume_token(RBRACE);
  }

  final public void StatementList() throws ParseException {
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FUNC:
      case VAR:
      case STRUCT:
      case MAP:
      case FOR:
      case IF:
      case RETURN:
      case MULTIPLY:
      case ASSIGN:
      case COLON_ASSIGN:
      case LPAREN:
      case LBRACKET:
      case IDENTIFIER:
      case INTEGER:
      case FLOAT:
      case STRING:
        ;
        break;
      default:
        jj_la1[11] = jj_gen;
        break label_5;
      }
      Statement();
    }
  }

  final public void Statement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case FUNC:
    case VAR:
    case STRUCT:
    case MAP:
    case MULTIPLY:
    case ASSIGN:
    case COLON_ASSIGN:
    case LPAREN:
    case LBRACKET:
    case IDENTIFIER:
    case INTEGER:
    case FLOAT:
    case STRING:
      SimpleStmt();
      break;
    case RETURN:
      ReturnStmt();
      break;
    case FOR:
    case IF:
      ControlStatement();
      break;
    default:
      jj_la1[12] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void ControlStatement() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IF:
      IfStmt();
      break;
    case FOR:
      ForStmt();
      break;
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void SimpleStmt() throws ParseException {
    if (jj_2_1(2147483647)) {
      ExpressionStmt();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case FUNC:
      case STRUCT:
      case MAP:
      case MULTIPLY:
      case ASSIGN:
      case COLON_ASSIGN:
      case LPAREN:
      case LBRACKET:
      case IDENTIFIER:
      case INTEGER:
      case FLOAT:
      case STRING:
        Assignment();
        break;
      case VAR:
        VarDecl();
        break;
      default:
        jj_la1[14] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void RegularStatement() throws ParseException {
    jj_consume_token(DOT);
    jj_consume_token(IDENTIFIER);
    RegularParamStmt();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SEMICOLON:
      jj_consume_token(SEMICOLON);
      break;
    default:
      jj_la1[15] = jj_gen;
      ;
    }
  }

  final public void RegularParamStmt() throws ParseException {
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DOT:
    case IDENTIFIER:
    case STRING:
      RegularExpressionStmt();
      label_6:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[16] = jj_gen;
          break label_6;
        }
        jj_consume_token(COMMA);
        RegularExpressionStmt();
      }
      break;
    default:
      jj_la1[17] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
  }

  final public void RegularExpressionStmt() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      jj_consume_token(IDENTIFIER);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DOT:
      case LPAREN:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DOT:
          ObjectElement();
          break;
        case LPAREN:
          CallFunction();
          break;
        default:
          jj_la1[18] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[19] = jj_gen;
        ;
      }
      break;
    case STRING:
      jj_consume_token(STRING);
      break;
    case DOT:
      ObjectElement();
      break;
    default:
      jj_la1[20] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void CallFunction() throws ParseException {
    jj_consume_token(LPAREN);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DOT:
    case IDENTIFIER:
    case STRING:
      RegularExpressionStmt();
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[21] = jj_gen;
          break label_7;
        }
        jj_consume_token(COMMA);
        RegularExpressionStmt();
      }
      break;
    default:
      jj_la1[22] = jj_gen;
      ;
    }
    jj_consume_token(RPAREN);
  }

  final public void ObjectElement() throws ParseException {
    jj_consume_token(DOT);
    jj_consume_token(IDENTIFIER);
  }

  final public void ExpressionStmt() throws ParseException {
    jj_consume_token(IDENTIFIER);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case DOT:
      RegularStatement();
      break;
    default:
      jj_la1[23] = jj_gen;
      Expression();
    }
  }

  final public void Assignment() throws ParseException {
    Expression();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ASSIGN:
      jj_consume_token(ASSIGN);
      break;
    case COLON_ASSIGN:
      jj_consume_token(COLON_ASSIGN);
      break;
    default:
      jj_la1[24] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    Expression();
  }

  final public void ReturnStmt() throws ParseException {
    jj_consume_token(RETURN);
    Expression();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SEMICOLON:
      jj_consume_token(SEMICOLON);
      break;
    default:
      jj_la1[25] = jj_gen;
      ;
    }
  }

  final public void IfStmt() throws ParseException {
    jj_consume_token(IF);
    Expression();
    Block();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ELSE:
      jj_consume_token(ELSE);
      Block();
      break;
    default:
      jj_la1[26] = jj_gen;
      ;
    }
  }

  final public void ForStmt() throws ParseException {
    jj_consume_token(FOR);
    if (jj_2_2(2147483647)) {
      ForClause();
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        RangeClause();
        break;
      default:
        jj_la1[27] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    Block();
  }

  final public void ForClause() throws ParseException {
    SimpleStmt();
    jj_consume_token(SEMICOLON);
    Expression();
    jj_consume_token(SEMICOLON);
    SimpleStmt();
  }

  final public void RangeClause() throws ParseException {
    jj_consume_token(IDENTIFIER);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case COMMA:
      jj_consume_token(COMMA);
      jj_consume_token(IDENTIFIER);
      break;
    default:
      jj_la1[28] = jj_gen;
      ;
    }
    jj_consume_token(COLON_ASSIGN);
    jj_consume_token(RANGE);
    Expression();
  }

  final public void SimpleExpression() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PLUS:
      jj_consume_token(PLUS);
      break;
    case MINUS:
      jj_consume_token(MINUS);
      break;
    case MULTIPLY:
      jj_consume_token(MULTIPLY);
      break;
    case DIVIDE:
      jj_consume_token(DIVIDE);
      break;
    case MOD:
      jj_consume_token(MOD);
      break;
    default:
      jj_la1[29] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Expression() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
    case INTEGER:
    case FLOAT:
    case STRING:
      AssignMulExp();
      label_8:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case PLUS:
        case MINUS:
        case MULTIPLY:
        case DIVIDE:
        case MOD:
          ;
          break;
        default:
          jj_la1[30] = jj_gen;
          break label_8;
        }
        SimpleExpression();
        AssignMulExp();
      }
      break;
    case FUNC:
    case STRUCT:
    case MAP:
    case MULTIPLY:
    case LBRACKET:
      TypeLit();
      break;
    default:
      jj_la1[32] = jj_gen;
      label_9:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case LPAREN:
        case IDENTIFIER:
        case INTEGER:
        case FLOAT:
        case STRING:
          ;
          break;
        default:
          jj_la1[31] = jj_gen;
          break label_9;
        }
        Primary();
        SimpleExpression();
        Primary();
      }
    }
  }

  final public void CallExpression() throws ParseException {
    jj_consume_token(LPAREN);
    Expression();
    label_10:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[33] = jj_gen;
        break label_10;
      }
      jj_consume_token(COMMA);
      Expression();
    }
    jj_consume_token(RPAREN);
  }

  final public void AssignMulExp() throws ParseException {
    MulExp();
    label_12:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[35] = jj_gen;
        break label_12;
      }
      jj_consume_token(COMMA);
      MulExp();
    }
  }

  final public void MulExp() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INTEGER:
      jj_consume_token(INTEGER);
      break;
    case STRING:
      jj_consume_token(STRING);
      break;
    case FLOAT:
      jj_consume_token(FLOAT);
      break;
    case IDENTIFIER:
      jj_consume_token(IDENTIFIER);
      break;
    default:
      jj_la1[36] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void Primary() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      jj_consume_token(IDENTIFIER);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case DOT:
      case LPAREN:
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case DOT:
          ObjectElement();
          break;
        case LPAREN:
          CallExpression();
          break;
        default:
          jj_la1[37] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
      default:
        jj_la1[38] = jj_gen;
        ;
      }
      break;
    case INTEGER:
      jj_consume_token(INTEGER);
      break;
    case FLOAT:
      jj_consume_token(FLOAT);
      break;
    case STRING:
      jj_consume_token(STRING);
      break;
    case LPAREN:
      jj_consume_token(LPAREN);
      Expression();
      jj_consume_token(RPAREN);
      break;
    default:
      jj_la1[39] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void TypeDecl() throws ParseException {
    jj_consume_token(TYPE);
    TypeSpec();
    label_13:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[40] = jj_gen;
        break label_13;
      }
      jj_consume_token(COMMA);
      TypeSpec();
    }
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SEMICOLON:
      jj_consume_token(SEMICOLON);
      break;
    default:
      jj_la1[41] = jj_gen;
      ;
    }
  }

  final public void TypeSpec() throws ParseException {
    jj_consume_token(IDENTIFIER);
    Type();
  }

  final public void Type() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
    case INTEGER:
    case FLOAT:
    case STRING:
      TypeName();
      break;
    case FUNC:
    case STRUCT:
    case MAP:
    case MULTIPLY:
    case LBRACKET:
      TypeLit();
      break;
    case LPAREN:
      jj_consume_token(LPAREN);
      Type();
      jj_consume_token(RPAREN);
      break;
    default:
      jj_la1[42] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void TypeName() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case STRING:
      jj_consume_token(STRING);
      break;
    case INTEGER:
      jj_consume_token(INTEGER);
      break;
    case FLOAT:
      jj_consume_token(FLOAT);
      break;
    case IDENTIFIER:
      jj_consume_token(IDENTIFIER);
      break;
    default:
      jj_la1[43] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void TypeLit() throws ParseException {
                  System.out.println("Type");
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACKET:
      jj_consume_token(LBRACKET);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case RBRACKET:
        SliceType();
        break;
      case INTEGER:
        ArrayType();
        break;
      default:
        jj_la1[44] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
    case STRUCT:
      StructType();
      break;
    case MULTIPLY:
      PointerType();
      break;
    case FUNC:
      FunctionType();
      break;
    case MAP:
      MapType();
      break;
    default:
      jj_la1[45] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void ArrayType() throws ParseException {
    ArrayLength();
    jj_consume_token(RBRACKET);
    ElementType();
  }

  final public void ArrayLength() throws ParseException {
    jj_consume_token(INTEGER);
  }

  final public void ElementType() throws ParseException {
    Type();
  }

  final public void StructType() throws ParseException {
                     System.out.println("Struct");
    jj_consume_token(STRUCT);
    jj_consume_token(LBRACE);
    label_14:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
        ;
        break;
      default:
        jj_la1[46] = jj_gen;
        break label_14;
      }
      StructDeclaration();
    }
    jj_consume_token(RBRACE);
  }

  final public void StructDeclaration() throws ParseException {
    jj_consume_token(IDENTIFIER);
    TypeName();
  }

  final public void FieldDecl() throws ParseException {
    IdentifierList();
    Type();
  }

  final public void IdentifierList() throws ParseException {
    jj_consume_token(IDENTIFIER);
    label_15:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[47] = jj_gen;
        break label_15;
      }
      jj_consume_token(COMMA);
      jj_consume_token(IDENTIFIER);
    }
  }

  final public void PointerType() throws ParseException {
    jj_consume_token(MULTIPLY);
    BaseType();
  }

  final public void BaseType() throws ParseException {
    Type();
  }

  final public void FunctionType() throws ParseException {
    jj_consume_token(FUNC);
    Signature();
  }

  final public void MethodSpec() throws ParseException {
    jj_consume_token(IDENTIFIER);
    Signature();
  }

  final public void SliceType() throws ParseException {
                    System.out.println("Slice");
    jj_consume_token(RBRACKET);
    TypeName();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LBRACE:
      jj_consume_token(LBRACE);
      AssignMulExp();
      jj_consume_token(RBRACE);
      break;
    default:
      jj_la1[48] = jj_gen;
      ;
    }
  }

  final public void MapType() throws ParseException {
    jj_consume_token(MAP);
    jj_consume_token(LBRACKET);
    KeyType();
    jj_consume_token(RBRACKET);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(LBRACE);
    label_16:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case IDENTIFIER:
      case INTEGER:
      case FLOAT:
      case STRING:
        ;
        break;
      default:
        jj_la1[49] = jj_gen;
        break label_16;
      }
      MapList();
      jj_consume_token(COMMA);
    }
    jj_consume_token(RBRACE);
  }

  final public void KeyType() throws ParseException {
    Type();
  }

  final public void MapList() throws ParseException {
    TypeName();
    jj_consume_token(COLON);
    jj_consume_token(IDENTIFIER);
    jj_consume_token(LBRACE);
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case IDENTIFIER:
      jj_consume_token(IDENTIFIER);
      jj_consume_token(COLON);
      TypeName();
      label_17:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
        case COMMA:
          ;
          break;
        default:
          jj_la1[50] = jj_gen;
          break label_17;
        }
        jj_consume_token(COMMA);
        jj_consume_token(IDENTIFIER);
        jj_consume_token(COLON);
        TypeName();
      }
      break;
    default:
      jj_la1[51] = jj_gen;
      ;
    }
    jj_consume_token(RBRACE);
  }

  final public void VarDecl() throws ParseException {
                  System.out.println("Si");
    jj_consume_token(VAR);
    VarSpec();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case SEMICOLON:
      jj_consume_token(SEMICOLON);
      break;
    default:
      jj_la1[52] = jj_gen;
      ;
    }
  }

  final public void VarSpec() throws ParseException {
    jj_consume_token(IDENTIFIER);
    label_18:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[53] = jj_gen;
        break label_18;
      }
      jj_consume_token(COMMA);
      jj_consume_token(IDENTIFIER);
    }
    TypeName();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ASSIGN:
      jj_consume_token(ASSIGN);
      Expression();
      break;
    default:
      jj_la1[54] = jj_gen;
      ;
    }
  }

  private boolean jj_2_1(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_1(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(0, xla); }
  }

  private boolean jj_2_2(int xla) {
    jj_la = xla; jj_lastpos = jj_scanpos = token;
    try { return !jj_3_2(); }
    catch(LookaheadSuccess ls) { return true; }
    finally { jj_save(1, xla); }
  }

  private boolean jj_3R_41() {
    if (jj_3R_54()) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_55()) { jj_scanpos = xsp; break; }
    }
    return false;
  }

  private boolean jj_3R_97() {
    if (jj_scan_token(LPAREN)) return true;
    Token xsp;
    xsp = jj_scanpos;
    if (jj_3R_101()) jj_scanpos = xsp;
    if (jj_scan_token(RPAREN)) return true;
    return false;
  }

  private boolean jj_3R_42() {
    if (jj_scan_token(IDENTIFIER)) return true;
    Token xsp;
    while (true) {
      xsp = jj_scanpos;
      if (jj_3R_56()) { jj_scanpos = xsp; break; }
    }
    if (jj_3R_57()) return true;
    xsp = jj_scanpos;
    if (jj_3R_58()) jj_scanpos = xsp;
    return false;
  }

  private boolean jj_3R_81() {
    if (jj_scan_token(LBRACE)) return true;
    if (jj_3R_36()) return true;
    if (jj_scan_token(RBRACE)) return true;
    return false;
  }
